Add sidebar button style

--- a/src/style.css
+++ b/src/style.css
@@ -44,9 +44,17 @@ li {
   vertical-align: middle;
 }
 
-#sidebar li:hover {
+#sidebar li:hover, #sidebar button:hover {
   background-color: rgb(176, 176, 176);
   cursor: pointer;
+}
+
+#sidebar button {
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  font-weight: bold;
+  background-color: var(--light-gray);
 }
 
 li img {
@@ -54,6 +62,12 @@ li img {
   width: auto;
   margin-right: 8px;
 }
+
+/* button img {
+  height: 24px;
+  width: auto;
+  margin-right: 8px;
+} */
 
 #todo-div {
   grid-area: main;
@@ -90,7 +104,20 @@ li img {
   background-color: var(--light-gray);
 }
 
+#task-form {
+  display: none; /* This is changed by one of the functions */
+}
 
+#button-div {
+  display: flex;
+  justify-content: space-between;
+}
+
+#button-div input {
+  width: 40%;
+  height: 30px;
+  text-align: center;
+}
 
 footer {
   grid-area: footer;
