--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
   --light-black: rgb(43, 43, 43);
   --light-gray: rgb(221, 221, 221);
   --lighter-gray: rgb(238, 238, 238);
+  --check-btn-width: 1.5rem;
 }
 
 * {
@@ -44,12 +45,12 @@ li {
   vertical-align: middle;
 }
 
-#sidebar li:hover, #sidebar button:hover {
+#sidebar li:hover, #sidebar button:hover, #todo-div button:hover {
   background-color: rgb(176, 176, 176);
   cursor: pointer;
 }
 
-#sidebar button {
+#sidebar button, #todo-div button {
   border: none;
   border-radius: 5px;
   padding: 5px;
@@ -80,10 +81,11 @@ li img {
 
 .check-btn {
   height: 1.5rem;
-  width: 1.5rem;
+  width: var(--check-btn-width);
   border-radius: 50%;
   display: inline-block;
   margin-right: 10px;
+  grid-area: 1 / 1 / 1 / 1;
 }
 
 .check-btn:hover {
@@ -104,12 +106,42 @@ li img {
   background-color: var(--light-gray);
 }
 
+/* TASK FORM ITEMS */
 #task-form {
-  display: none; /* This is changed by one of the functions */
+  display: none; /* normally this is grid; changed by one of the functions */
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 2fr repeat(3, 1fr);
+  gap: 10px;
+  border: 1px solid black;
+}
+
+#task-form input {
+  /* border: none; */
+}
+
+#title {
+  grid-area: 1 / 1 / 1 / -1;
+}
+
+#category {
+
+}
+
+#date {
+  grid-area: 2 / 1 / 2 / -1;
+}
+
+#time {
+  grid-area: 2 / 2 / 2 / -1;
+}
+
+#notes {
+  grid-area: 3 / 1 / 3 / -1;
 }
 
 #button-div {
   display: flex;
+  grid-area: 4 / 1 / 4 / -1;
   justify-content: space-between;
 }
 
@@ -117,6 +149,25 @@ li img {
   width: 40%;
   height: 30px;
   text-align: center;
+}
+
+#button-div input {
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+#button-div input:hover {
+  cursor: pointer;
+  filter: brightness(1.4);
+}
+
+#add-input-btn {
+  background-color: rgb(86, 200, 86);
+}
+
+#cancel-input-btn {
+  background-color: rgb(255, 75, 75);
 }
 
 footer {
