--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,21 @@ li img {
   margin-right: 8px;
 }
 
+#category-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#category-form input {
+  width: 100%;
+}
+
+.active {
+  outline: 1px solid white;
+  outline-offset: -4px;
+}
+
 /* button img {
   height: 24px;
   width: auto;
@@ -93,7 +108,6 @@ li img {
 }
 
 .unchecked {
-  /* background-color: #bbb; */
   border: 2px solid black;
 }
 
@@ -110,22 +124,26 @@ li img {
 #task-form {
   display: none; /* normally this is grid; changed by one of the functions */
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 2fr repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   gap: 10px;
-  border: 1px solid black;
 }
 
 #task-form input {
-  /* border: none; */
+  padding: 5px;
+  /* border-radius: 5px; */
+  border: 0;
+  border-bottom: 1px solid black;
+  background-color: var(--lighter-gray);
+  border-radius: 0 0 5px 0;
 }
 
 #title {
   grid-area: 1 / 1 / 1 / -1;
 }
 
-#category {
+/* #category {
 
-}
+} */
 
 #date {
   grid-area: 2 / 1 / 2 / -1;
