--- a/src/style.css
+++ b/src/style.css
@@ -124,11 +124,11 @@ li img {
 #task-form {
   display: none; /* normally this is grid; changed by one of the functions */
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
   gap: 10px;
 }
 
-#task-form input {
+#task-form input, #task-form select {
   padding: 5px;
   /* border-radius: 5px; */
   border: 0;
@@ -141,10 +141,6 @@ li img {
   grid-area: 1 / 1 / 1 / -1;
 }
 
-/* #category {
-
-} */
-
 #date {
   grid-area: 2 / 1 / 2 / -1;
 }
@@ -153,13 +149,17 @@ li img {
   grid-area: 2 / 2 / 2 / -1;
 }
 
+#category-select {
+  grid-area: 3/ 1 / 3 / -1;
+}
+
 #notes {
-  grid-area: 3 / 1 / 3 / -1;
+  grid-area: 4 / 1 / 4 / -1;
 }
 
 #button-div {
   display: flex;
-  grid-area: 4 / 1 / 4 / -1;
+  grid-area: 5 / 1 / 5 / -1;
   justify-content: space-between;
 }
 
